--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -77,6 +84,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Inter',var(--font-mono);
 }
 
 html,
@@ -87,12 +95,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
 }
 
 a {
@@ -104,4 +107,63 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 64px;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 900;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+
+input {
+  outline: none;
+}
+
+
+::selection {
+  background: #a7f3d0;
+  color: #000;
+}
+
+::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
+}
+
+/* Стилизация полосы прокрутки */
+::-webkit-scrollbar-thumb {
+  background-color: #000; /* Цвет полосы прокрутки */
+  border-radius: 10px; /* Закругление углов */
+}
+
+/* Стилизация фона полосы прокрутки */
+::-webkit-scrollbar-track {
+  background-color: #fff; /* Цвет фона полосы прокрутки */
+}
+
+.input-wrap {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-qr {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
 }
